intel-pt.h

struct pt_query_decoder;
enum pt_error_code {
	pte_ok,
	pte_internal,
	pte_invalid,
	pte_nosync,
	pte_bad_opc,
	pte_bad_packet,
	pte_bad_context,
	pte_eos,
	pte_bad_query,
	pte_nomem,
	pte_bad_config,
	pte_noip,
	pte_ip_suppressed,
	pte_nomap,
	pte_bad_insn,
	pte_no_time,
	pte_no_cbr,
	pte_bad_image,
	pte_bad_lock,
	pte_not_supported,
	pte_retstack_empty,
	pte_bad_retcomp,
	pte_bad_status_update,
	pte_no_enable,
	pte_event_ignored,
	pte_overflow,
	pte_bad_file,
	pte_bad_cpu
};
struct pt_cpu {
	enum pt_cpu_vendor vendor;
	uint16_t family;
	uint8_t model;
	uint8_t stepping;
};
struct pt_errata {
	uint32_t bdm70:1;
	uint32_t bdm64:1;
	uint32_t skd007:1;
	uint32_t skd022:1;
	uint32_t skd010:1;
	uint32_t skl014:1;
	uint32_t apl12:1;
	uint32_t apl11:1;
	uint32_t skl168:1;
	uint32_t skz84:1;
	uint32_t reserved[15];
};
struct pt_conf_flags {
	union {
		struct {
			uint32_t end_on_call:1;
			uint32_t enable_tick_events:1;
			uint32_t end_on_jump:1;
#if (LIBIPT_VERSION >= 0x201)
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
#endif
		} block;
		struct {
			uint32_t enable_tick_events:1;
#if (LIBIPT_VERSION >= 0x201)
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
#endif
		} insn;
#if (LIBIPT_VERSION >= 0x201)
		struct {
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
		} query;
		struct {
			uint32_t keep_tcal_on_ovf:1;
			uint32_t enable_iflags_events:1;
		} event;
#endif 
		uint32_t reserved[4];
	} variant;
};
struct pt_conf_addr_filter {
	union {
		uint64_t addr_cfg;
		struct {
			uint32_t addr0_cfg:4;
			uint32_t addr1_cfg:4;
			uint32_t addr2_cfg:4;
			uint32_t addr3_cfg:4;
		} ctl;
	} config;
	uint64_t addr0_a;
	uint64_t addr0_b;
	uint64_t addr1_a;
	uint64_t addr1_b;
	uint64_t addr2_a;
	uint64_t addr2_b;
	uint64_t addr3_a;
	uint64_t addr3_b;
	uint64_t reserved[8];
};
struct pt_packet_unknown;
struct pt_config {
	size_t size;
	uint8_t *begin;
	uint8_t *end;
	struct {
		int (*callback)(struct pt_packet_unknown *unknown,
				const struct pt_config *config,
				const uint8_t *pos, void *context);
		void *context;
	} decode;
	struct pt_cpu cpu;
	struct pt_errata errata;
	uint32_t cpuid_0x15_eax, cpuid_0x15_ebx;
	uint8_t mtc_freq;
	uint8_t nom_freq;
	struct pt_conf_flags flags;
	struct pt_conf_addr_filter addr_filter;
};
enum pt_exec_mode {
	ptem_unknown,
	ptem_16bit,
	ptem_32bit,
	ptem_64bit
};
struct pt_packet_unknown {
	const uint8_t *packet;
	void *priv;
};
enum pt_event_type {
	ptev_enabled,
	ptev_disabled,
	ptev_async_disabled,
	ptev_async_branch,
	ptev_paging,
	ptev_async_paging,
	ptev_overflow,
	ptev_exec_mode,
	ptev_tsx,
	ptev_stop,
	ptev_vmcs,
	ptev_async_vmcs,
	ptev_exstop,
	ptev_mwait,
	ptev_pwre,
	ptev_pwrx,
	ptev_ptwrite,
	ptev_tick,
	ptev_cbr,
	ptev_mnt,
#if (LIBIPT_VERSION >= 0x201)
	ptev_tip,
	ptev_tnt,
	ptev_iflags,
	ptev_interrupt,
	ptev_iret,
	ptev_smi,
	ptev_rsm,
	ptev_sipi,
	ptev_init,
	ptev_vmentry,
	ptev_vmexit,
	ptev_shutdown,
	ptev_uintr,
	ptev_uiret,
#endif
};
struct pt_event {
	enum pt_event_type type;
	uint32_t ip_suppressed:1;
	uint32_t status_update:1;
	uint32_t has_tsc:1;
	uint64_t tsc;
	uint32_t lost_mtc;
	uint32_t lost_cyc;
	uint64_t reserved[2];
	union {
		struct {
			uint64_t ip;
			uint32_t resumed:1;
		} enabled;
		struct {
			uint64_t ip;
		} disabled;
		struct {
			uint64_t at;
			uint64_t ip;
		} async_disabled;
		struct {
			uint64_t from;
			uint64_t to;
		} async_branch;
		struct {
			uint64_t cr3;
			uint32_t non_root:1;
		} paging;
		struct {
			uint64_t cr3;
			uint32_t non_root:1;
			uint64_t ip;
		} async_paging;
		struct {
			uint64_t ip;
		} overflow;
		struct {
			enum pt_exec_mode mode;
			uint64_t ip;
		} exec_mode;
		struct {
			uint64_t ip;
			uint32_t speculative:1;
			uint32_t aborted:1;
		} tsx;
		struct {
			uint64_t base;
		} vmcs;
		struct {
			uint64_t base;
			uint64_t ip;
		} async_vmcs;
		struct {
			uint64_t ip;
		} exstop;
		struct {
			uint64_t ip;
			uint32_t hints;
			uint32_t ext;
		} mwait;
		struct {
			uint8_t state;
			uint8_t sub_state;
			uint32_t hw:1;
		} pwre;
		struct {
			uint8_t last;
			uint8_t deepest;
			uint32_t interrupt:1;
			uint32_t store:1;
			uint32_t autonomous:1;
		} pwrx;
		struct {
			uint64_t ip;
			uint8_t size;
			uint64_t payload;
		} ptwrite;
		struct {
			uint64_t ip;
		} tick;
		struct {
			uint16_t ratio;
		} cbr;
		struct {
			uint64_t payload;
		} mnt;
#if (LIBIPT_VERSION >= 0x201)
		struct {
			uint64_t ip;
		} tip;
		struct {
			uint64_t bits;
			uint8_t size;
		} tnt;
		struct {
			uint32_t iflag:1;
			uint64_t ip;
		} iflags;
		struct {
			uint32_t has_cr2:1;
			uint8_t vector;
			uint64_t cr2;
			uint64_t ip;
		} interrupt;
		struct {
			uint64_t ip;
		} iret;
		struct {
			uint64_t ip;
		} smi;
		struct {
			uint64_t ip;
		} rsm;
		struct {
			uint8_t vector;
		} sipi;
		struct {
			uint64_t ip;
		} init;
		struct {
			uint64_t ip;
		} vmentry;
		struct {
			uint32_t has_vector:1;
			uint32_t has_vmxr:1;
			uint32_t has_vmxq:1;
			uint8_t vector;
			uint64_t vmxr;
			uint64_t vmxq;
			uint64_t ip;
		} vmexit;
		struct {
			uint64_t ip;
		} shutdown;
		struct {
			uint8_t vector;
			uint64_t ip;
		} uintr;
		struct {
			uint64_t ip;
		} uiret;
#endif 
	} variant;
};
enum pt_status_flag {
	pts_event_pending	= 1 << 0,
	pts_ip_suppressed	= 1 << 1,
	pts_eos			= 1 << 2
};
extern pt_export int pt_qry_sync_set(struct pt_query_decoder *decoder,
				     uint64_t *ip, uint64_t offset);
extern pt_export int pt_qry_get_offset(const struct pt_query_decoder *decoder,
				       uint64_t *offset);
extern pt_export int
pt_qry_get_sync_offset(const struct pt_query_decoder *decoder,
		       uint64_t *offset);
extern pt_export const struct pt_config *
pt_qry_get_config(const struct pt_query_decoder *decoder);
extern pt_export int pt_qry_cond_branch(struct pt_query_decoder *decoder,
					int *taken);
extern pt_export int pt_qry_indirect_branch(struct pt_query_decoder *decoder,
					    uint64_t *ip);
extern pt_export int pt_qry_event(struct pt_query_decoder *decoder,
				  struct pt_event *event, size_t size);
extern pt_export int pt_qry_time(struct pt_query_decoder *decoder,
				 uint64_t *time, uint32_t *lost_mtc,
				 uint32_t *lost_cyc);
extern pt_export int pt_qry_core_bus_ratio(struct pt_query_decoder *decoder,
					   uint32_t *cbr);
struct pt_asid {
	size_t size;
	uint64_t cr3;
	uint64_t vmcs;
};
struct pt_image_section_cache;
extern pt_export struct pt_image_section_cache *
pt_iscache_alloc(const char *name);
extern pt_export void pt_iscache_free(struct pt_image_section_cache *iscache);
extern pt_export int
pt_iscache_set_limit(struct pt_image_section_cache *iscache, uint64_t limit);
extern pt_export const char *
pt_iscache_name(const struct pt_image_section_cache *iscache);
extern pt_export int pt_iscache_add_file(struct pt_image_section_cache *iscache,
					 const char *filename, uint64_t offset,
					 uint64_t size, uint64_t vaddr);
typedef int (read_memory_callback_t)(uint8_t *buffer, size_t size,
				     const struct pt_asid *asid,
				     uint64_t ip, void *context);