src/bindings.rs

extern "C" {
    #[doc = " Manually synchronize an Intel PT query decoder."]
    #[doc = ""]
    #[doc = " Synchronize \\@decoder on the syncpoint at \\@offset.  There must be a PSB"]
    #[doc = " packet at \\@offset."]
    #[doc = ""]
    #[doc = " If \\@ip is not NULL, set it to last ip."]
    #[doc = ""]
    #[doc = " Returns a non-negative pt_status_flag bit-vector on success, a negative error"]
    #[doc = " code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if an unknown packet is encountered."]
    #[doc = " Returns -pte_bad_packet if an unknown packet payload is encountered."]
    #[doc = " Returns -pte_eos if \\@offset lies outside of \\@decoder's trace buffer."]
    #[doc = " Returns -pte_eos if \\@decoder reaches the end of its trace buffer."]
    #[doc = " Returns -pte_invalid if \\@decoder is NULL."]
    #[doc = " Returns -pte_nosync if there is no syncpoint at \\@offset."]
    pub fn pt_qry_sync_set(
        decoder: *mut pt_query_decoder,
        ip: *mut u64,
        offset: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the current decoder position."]
    #[doc = ""]
    #[doc = " Fills the current \\@decoder position into \\@offset."]
    #[doc = ""]
    #[doc = " This is useful for reporting errors."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@offset is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_qry_get_offset(
        decoder: *const pt_query_decoder,
        offset: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the position of the last synchronization point."]
    #[doc = ""]
    #[doc = " Fills the last synchronization position into \\@offset."]
    #[doc = ""]
    #[doc = " This is useful for splitting a trace stream for parallel decoding."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@offset is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_qry_get_sync_offset(
        decoder: *const pt_query_decoder,
        offset: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn pt_qry_get_config(decoder: *const pt_query_decoder) -> *const pt_config;
}
extern "C" {
    #[doc = " Query whether the next unconditional branch has been taken."]
    #[doc = ""]
    #[doc = " On success, provides 1 (taken) or 0 (not taken) in \\@taken for the next"]
    #[doc = " conditional branch and updates \\@decoder."]
    #[doc = ""]
    #[doc = " Returns a non-negative pt_status_flag bit-vector on success, a negative error"]
    #[doc = " code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if an unknown packet is encountered."]
    #[doc = " Returns -pte_bad_packet if an unknown packet payload is encountered."]
    #[doc = " Returns -pte_bad_query if no conditional branch is found."]
    #[doc = " Returns -pte_eos if decoding reached the end of the Intel PT buffer."]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@taken is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_qry_cond_branch(
        decoder: *mut pt_query_decoder,
        taken: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the next indirect branch destination."]
    #[doc = ""]
    #[doc = " On success, provides the linear destination address of the next indirect"]
    #[doc = " branch in \\@ip and updates \\@decoder."]
    #[doc = ""]
    #[doc = " Returns a non-negative pt_status_flag bit-vector on success, a negative error"]
    #[doc = " code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if an unknown packet is encountered."]
    #[doc = " Returns -pte_bad_packet if an unknown packet payload is encountered."]
    #[doc = " Returns -pte_bad_query if no indirect branch is found."]
    #[doc = " Returns -pte_eos if decoding reached the end of the Intel PT buffer."]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@ip is NULL."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_qry_indirect_branch(
        decoder: *mut pt_query_decoder,
        ip: *mut u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Query the next pending event."]
    #[doc = ""]
    #[doc = " On success, provides the next event \\@event and updates \\@decoder."]
    #[doc = ""]
    #[doc = " The \\@size argument must be set to sizeof(struct pt_event)."]
    #[doc = ""]
    #[doc = " Returns a non-negative pt_status_flag bit-vector on success, a negative error"]
    #[doc = " code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_bad_opc if an unknown packet is encountered."]
    #[doc = " Returns -pte_bad_packet if an unknown packet payload is encountered."]
    #[doc = " Returns -pte_bad_query if no event is found."]
    #[doc = " Returns -pte_eos if decoding reached the end of the Intel PT buffer."]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@event is NULL."]
    #[doc = " Returns -pte_invalid if \\@size is too small."]
    #[doc = " Returns -pte_nosync if \\@decoder is out of sync."]
    pub fn pt_qry_event(
        decoder: *mut pt_query_decoder,
        event: *mut pt_event,
        size: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Query the current time."]
    #[doc = ""]
    #[doc = " On success, provides the time at the last query in \\@time."]
    #[doc = ""]
    #[doc = " The time is similar to what a rdtsc instruction would return.  Depending"]
    #[doc = " on the configuration, the time may not be fully accurate.  If TSC is not"]
    #[doc = " enabled, the time is relative to the last synchronization and can't be used"]
    #[doc = " to correlate with other TSC-based time sources.  In this case, -pte_no_time"]
    #[doc = " is returned and the relative time is provided in \\@time."]
    #[doc = ""]
    #[doc = " Some timing-related packets may need to be dropped (mostly due to missing"]
    #[doc = " calibration or incomplete configuration).  To get an idea about the quality"]
    #[doc = " of the estimated time, we record the number of dropped MTC and CYC packets."]
    #[doc = ""]
    #[doc = " If \\@lost_mtc is not NULL, set it to the number of lost MTC packets."]
    #[doc = " If \\@lost_cyc is not NULL, set it to the number of lost CYC packets."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@time is NULL."]
    #[doc = " Returns -pte_no_time if there has not been a TSC packet."]
    pub fn pt_qry_time(
        decoder: *mut pt_query_decoder,
        time: *mut u64,
        lost_mtc: *mut u32,
        lost_cyc: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Return the current core bus ratio."]
    #[doc = ""]
    #[doc = " On success, provides the current core:bus ratio in \\@cbr.  The ratio is"]
    #[doc = " defined as core cycles per bus clock cycle."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@decoder or \\@cbr is NULL."]
    #[doc = " Returns -pte_no_cbr if there has not been a CBR packet."]
    pub fn pt_qry_core_bus_ratio(
        decoder: *mut pt_query_decoder,
        cbr: *mut u32,
    ) -> ::std::os::raw::c_int;
}
#[doc = " An Intel PT address space identifier."]
#[doc = ""]
#[doc = " This identifies a particular address space when adding file sections or"]
#[doc = " when reading memory."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_asid {
    #[doc = " The size of this object - set to sizeof(struct pt_asid)."]
    pub size: usize,
    #[doc = " The CR3 value."]
    pub cr3: u64,
    #[doc = " The VMCS Base address."]
    pub vmcs: u64,
}
#[test]
fn bindgen_test_layout_pt_asid() {
    assert_eq!(
        ::std::mem::size_of::<pt_asid>(),
        24usize,
        concat!("Size of: ", stringify!(pt_asid))
    );
    assert_eq!(
        ::std::mem::align_of::<pt_asid>(),
        8usize,
        concat!("Alignment of ", stringify!(pt_asid))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_asid>())).size as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_asid),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_asid>())).cr3 as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_asid),
            "::",
            stringify!(cr3)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<pt_asid>())).vmcs as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(pt_asid),
            "::",
            stringify!(vmcs)
        )
    );
}
pub const pt_asid_no_cr3: u64 = 18446744073709551615;
pub const pt_asid_no_vmcs: u64 = 18446744073709551615;
#[doc = " A cache of traced image sections."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pt_image_section_cache {
    _unused: [u8; 0],
}
extern "C" {
    #[doc = " Allocate a traced memory image section cache."]
    #[doc = ""]
    #[doc = " An optional \\@name may be given to the cache.  The name string is copied."]
    #[doc = ""]
    #[doc = " Returns a new traced memory image section cache on success, NULL otherwise."]
    pub fn pt_iscache_alloc(name: *const ::std::os::raw::c_char) -> *mut pt_image_section_cache;
}
extern "C" {
    #[doc = " Free a traced memory image section cache."]
    #[doc = ""]
    #[doc = " The \\@iscache must have been allocated with pt_iscache_alloc()."]
    #[doc = " The \\@iscache must not be used after a successful return."]
    pub fn pt_iscache_free(iscache: *mut pt_image_section_cache);
}
extern "C" {
    #[doc = " Set the image section cache limit."]
    #[doc = ""]
    #[doc = " Set the limit for a section cache in bytes.  A non-zero limit will keep the"]
    #[doc = " least recently used sections mapped until the limit is reached.  A limit of"]
    #[doc = " zero disables caching."]
    #[doc = ""]
    #[doc = " Returns zero on success, a negative pt_error_code otherwise."]
    #[doc = " Returns -pte_invalid if \\@iscache is NULL."]
    pub fn pt_iscache_set_limit(
        iscache: *mut pt_image_section_cache,
        limit: u64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Get the image section cache name."]
    #[doc = ""]
    #[doc = " Returns a pointer to \\@iscache's name or NULL if there is no name."]
    pub fn pt_iscache_name(iscache: *const pt_image_section_cache)
        -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[doc = " Add a new file section to the traced memory image section cache."]
    #[doc = ""]
    #[doc = " Adds a new section consisting of \\@size bytes starting at \\@offset in"]
    #[doc = " \\@filename loaded at the virtual address \\@vaddr if \\@iscache does not"]
    #[doc = " already contain such a section."]
    #[doc = ""]
    #[doc = " Returns an image section identifier (isid) uniquely identifying that section"]
    #[doc = " in \\@iscache."]
    #[doc = ""]
    #[doc = " The section is silently truncated to match the size of \\@filename."]
    #[doc = ""]
    #[doc = " Returns a positive isid on success, a negative error code otherwise."]
    #[doc = ""]
    #[doc = " Returns -pte_invalid if \\@iscache or \\@filename is NULL."]
    #[doc = " Returns -pte_invalid if \\@offset is too big."]
    pub fn pt_iscache_add_file(
        iscache: *mut pt_image_section_cache,
        filename: *const ::std::os::raw::c_char,
        offset: u64,
        size: u64,
        vaddr: u64,
    ) -> ::std::os::raw::c_int;
}
